# thicc

./: .gitignore  Makefile  README.md  cabal.project  config  thicc.cabal  thicc.service
debian/: changelog  conffiles  control  postinst  rules  thicc.dirs  thicc.install
src/: Thicc.hs
src/Thicc/: Actions.hs  ApiKeys.hs  Config.hs  Daemon.hs  Daemonize.hs  Messages.hs  Monad.hs  Pipes.hs  Socket.hs
thicc/: Actions.hs  Main.hs
thicc-rest/: Main.hs
